--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <!--<header>
                 <nav class="navbar navbar-inverse">
                     <div class="container-fluid">
                       <div class="navbar-header">
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </nav>
-    </header>
+    </header>-->
     
     <div class="body" id="start">
         <div class="heroImage">
